--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~14.2.10",
     "@angular/router": "~14.2.10",
     "bootstrap": "^5.2.2",
+    "ngx-toastr": "^15.2.2",
     "rxjs": "~7.5.7",
     "tslib": "^2.4.1",
     "zone.js": "~0.12.0"
